# ChangeLog for dev-python/psutil
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/psutil/ChangeLog,v 1.22 2013/07/18 00:10:27 radhermit Exp $

*psutil-1.0.1 (18 Jul 2013)

  18 Jul 2013; Tim Harder <radhermit@gentoo.org> +psutil-1.0.1.ebuild:
  Version bump.

  10 Jul 2013; Tim Harder <radhermit@gentoo.org> -psutil-0.3.0.ebuild,
  -psutil-0.4.0.ebuild, -psutil-0.4.1.ebuild, -psutil-0.5.1.ebuild,
  -psutil-0.7.0.ebuild:
  Remove old.

*psutil-1.0.0 (10 Jul 2013)

  10 Jul 2013; Tim Harder <radhermit@gentoo.org> +psutil-1.0.0.ebuild:
  Version bump.

  12 May 2013; Mike Gilbert <floppym@gentoo.org> psutil-0.7.1.ebuild:
  Add setuptools dependency and restore python3.

  12 May 2013; Mike Gilbert <floppym@gentoo.org> psutil-0.7.1.ebuild:
  Add a die message for tests.

*psutil-0.7.1 (12 May 2013)

  12 May 2013; Ian Delaney <idella4@gentoo.org> +psutil-0.7.1.ebuild:
  bump, test fails filed upstream -> wrt Bug #469404

*psutil-0.7.0 (16 Apr 2013)

  16 Apr 2013; Patrick Lauer <patrick@gentoo.org> +psutil-0.7.0.ebuild:
  Bump

  20 Nov 2012; Agostino Sarubbo <ago@gentoo.org> psutil-0.6.1.ebuild:
  Stable for x86, wrt bug #441286

  06 Nov 2012; Agostino Sarubbo <ago@gentoo.org> psutil-0.6.1.ebuild:
  Stable for amd64, wrt bug #441286

*psutil-0.6.1 (24 Aug 2012)

  24 Aug 2012; Patrick Lauer <patrick@gentoo.org> +psutil-0.6.1.ebuild:
  Bump

*psutil-0.5.1 (11 Jul 2012)

  11 Jul 2012; Tim Harder <radhermit@gentoo.org> +psutil-0.5.1.ebuild:
  Version bump.

  12 Mar 2012; Marien Zwart <marienz@gentoo.org> psutil-0.3.0.ebuild,
  psutil-0.4.0.ebuild, psutil-0.4.1.ebuild:
  Fix typo (s/PYTHON_RESTRICT_ABIS/RESTRICT_PYTHON_ABIS/)

  21 Feb 2012; Patrick Lauer <patrick@gentoo.org> psutil-0.3.0.ebuild,
  psutil-0.4.0.ebuild, psutil-0.4.1.ebuild:
  Restricting jython properly

  21 Feb 2012; Patrick Lauer <patrick@gentoo.org> psutil-0.3.0.ebuild,
  psutil-0.4.0.ebuild, psutil-0.4.1.ebuild:
  Restricting jython