@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/psutil/psutil-1.0.1.ebuild,v 1.1 2013/07/18 00:10:27 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/psutil/psutil-1.0.1.ebuild,v 1.2 2013/08/08 07:32:49 pinkbyte Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python{2_5,2_6,2_7,3_1,3_2,3_3} pypy{1_9,2_0} )
@@ -13,7 +13,7 @@ SRC_URI="http://psutil.googlecode.com/files/${P}.tar.gz"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 ~arm ~x86"
 
 DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]"
 
