@@ -4,11 +4,11 @@ DESCRIPTION=CLI curses based monitoring tool
 EAPI=5
 HOMEPAGE=https://github.com/nicolargo/glances/blob/master/README.md http://pypi.python.org/pypi/Glances
 IUSE=python_targets_python2_6 python_targets_python2_7 python_targets_python3_2 python_targets_python3_3
-KEYWORDS=~amd64 ~x86 ~amd64-linux ~x86-linux
+KEYWORDS=~amd64 ~arm ~x86 ~amd64-linux ~x86-linux
 LICENSE=LGPL-3
 RDEPEND=dev-python/setuptools[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_python3_2(-),-python_single_target_python3_3(-)] dev-python/psutil[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_python3_2(-),-python_single_target_python3_3(-)] python_targets_python2_6? ( dev-lang/python:2.6[ncurses] ) python_targets_python2_7? ( dev-lang/python:2.7[ncurses] ) python_targets_python3_2? ( dev-lang/python:3.2[ncurses] ) python_targets_python3_3? ( dev-lang/python:3.3[ncurses] ) dev-python/python-exec[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_python3_2(-),-python_single_target_python3_3(-)]
 REQUIRED_USE=|| ( python_targets_python2_6 python_targets_python2_7 python_targets_python3_2 python_targets_python3_3 )
 SLOT=0
 SRC_URI=https://github.com/nicolargo/glances/archive/v1.6.1.tar.gz -> glances-1.6.1.tar.gz
 _eclasses_=distutils-r1	c1ae0d90d918406fff8ee3676a013046	eutils	63afaaed8aa819fdcb814c7cd39495a2	linux-info	dd8fdcccc30f117673b4cba4ed4f74a7	multibuild	c2f33b0eedd7bcfd5bc226baa8da7837	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	python-r1	32798682168185fa4a903cb655c89f1d	python-utils-r1	e3288ba49a9a4406c283001e4d284aad	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=f5377e4df62977dcb6375c45af9b3113
+_md5_=9c10b4c69a6f18138454ab8f9791b5c3
