@@ -2,13 +2,17 @@
 Hash: SHA256
 
 DIST glances-1.6.1.tar.gz 633344 SHA256 6da67b19e8508f6f93fb05536ba42b22355d3cb2637e34d21e056524f93d33a2 SHA512 01a2789b3dc48cfcfbdb1572fefcf00c14d7444ab677906078e7718adfabfd1e6371f03f06a78952cd87d0c223fe045b228f442403353e688f6fac7f2c541058 WHIRLPOOL 48d0198e4af4eb01dabeb63ea4dcf13bf5db022da93c1c71cea28889462bce0c014ec9278cca10aaef465b3e2556de676e8e065c67beede1d61a0765a5de76d5
-EBUILD glances-1.6.1.ebuild 1371 SHA256 441532b338ae70cd9965339b45db1aee9c50554c36ece285caa5ae0feeec53ff SHA512 589b86f44451fb93260b8abb6a75ec0a854a4f78a9494d9bc3bb5bef74ffd095246bcdcb86cffa89e2e73dae7eda9d091f55c1812e5321567d3d34dacc08848c WHIRLPOOL 3c61997c3d1070d62d899aea40b0006bb2484f17b1c4ca5b569f965e9620756f68aae9076f310595024bf7d2382f73f90d8ffa4e638bb814980658ad393e2159
-MISC ChangeLog 1713 SHA256 2808ac070d32580e1be9d6503e008396523e11556790779fda37f0977493848f SHA512 4dde0d3e17cd81ca310b57045e88ae0fa53c8aeeb1f16d9cb3a61c36e51b6237c2eae94455e57b53534b1eda6e42f9872bb3a1b76936663e60e398b58294042f WHIRLPOOL 48abe131115f2d902abc2b45ecbab467d24ad9a43b7ceaac07a2482b0775d3a87de32e6277a58ea46a44cd78fcf9649017420c0138a6b06ebd22f501f3520c97
+EBUILD glances-1.6.1.ebuild 1376 SHA256 071403950c4d4d484ebdd3c0246731f4789e0c7807f5c3d5ced61010647d0b40 SHA512 d5a3bc35707cffa8b7af7778e2fd655297fbc967ecff45418aafdd4cbcfc347a1825ee8f9c2d4249e1c0ac99b9c865b4bebe2a4f8211a3639cc8033d7618764b WHIRLPOOL 4faf2f7de820aa281e4149ef84ca92cc70c46aba84824932cfed25b3dd6d69941d22f6cf784e91374d0b467da73667d6eb31d03039414ab38e977d3b465d2467
+MISC ChangeLog 1822 SHA256 fa620d7a7db3efc26282ccf66ecbb836b88cea3956868dc37d63969949775fee SHA512 d1744d12fb70e17a0c221b1d3d7c26bc9dd36f1b69d58eca95c323a65bfc91c2ff9a2e26727b536e69d212ca2fdfe9cde06ea4a8d2f5ee818a6147f2c4e0e438 WHIRLPOOL 10e11c324503cf55fec3c717f49542fa53bb56b5235f03ee78dbc69d692c4843afd811aaed803185c5fc9977c6be79581380d072f9b4358008fd56457df99402
 MISC metadata.xml 258 SHA256 28ad63518739e649db94f74367681857f3a6d143abd84600604ac021d4e0d72e SHA512 845ca81c0cc1acdb26455c6225f79419bd1a4f4dc147214749a341d86f98e3122c15600b974e2c30e3cce9c391c08f9c60bef583f7a40452d5a4662395f77ab9 WHIRLPOOL 6a6fb10cc4d2d3b237fff30eb4c40933ddfc83947f4b4d2fe59023c7fbe4c7a991f5948035ac61c13ff9a929fa7a8b712417ff5df9d4c876785017d9dc114850
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlICfkYACgkQ1ycZbhPLE2BScACfaOchFEsCUKWvCLJBNUUDIIUP
-t6IAnReRyePKbdl+6N8Dzv5DtKcRGQ2F
-=oYK8
+iQEcBAEBCAAGBQJSA0l0AAoJECo/aRed9267Fo8H/1vRXcjfBAT4MW1lSpPedgBJ
+WhxkPpb1cVZKybyiQwhlqgsTdlpn++KJMFeyYOH/g1f0qkWfDTLaHpeSvGf+NxZk
+BudcLYGCDeoyNTZQae9vLi5u2AjNPAibwiPRuJ3/vsVnQcQuDBfrwq3zCXEnjzVu
+kaaEHDrM8PqxudCnmRQqdQ0OyUgYKmKBQQmzhm9k8/oLOK4KWc2Mh52qZ39RY3rA
+PP3z2o0TkBK9BERrYYvYYvZT1YQ9ZgXGyrtc7olKwcfE2g3RNdkrnpCQTQze3hzK
+OL6eFPJn5bHJUeH9GovFZEg/qEqGIFGzQFbLUeSBwLKnTFEO7tsi1o6pN481oVA=
+=SC5k
 -----END PGP SIGNATURE-----
