@@ -1,6 +1,9 @@
 # ChangeLog for sys-process/glances
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/glances/ChangeLog,v 1.8 2013/08/07 17:05:06 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/glances/ChangeLog,v 1.9 2013/08/08 07:33:32 pinkbyte Exp $
+
+  08 Aug 2013; Sergey Popov <pinkbyte@gentoo.org> glances-1.6.1.ebuild:
+  Add ~arm keyword, wrt bug #477832
 
   07 Aug 2013; Sébastien Fabbro <bicatali@gentoo.org> glances-1.6.1.ebuild:
   Keyword amd64-linux and x86-linux
